// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component to match snapshot 1`] = `
<Range
  allowOverlap={false}
  direction="to left"
  disabled={false}
  max={999}
  min={0}
  onChange={[Function]}
  renderThumb={[Function]}
  renderTrack={[Function]}
  rtl={false}
  step={1}
  values={
    Array [
      0,
    ]
  }
/>
`;

exports[`Slider component to match snapshot 2`] = `
<Range
  allowOverlap={false}
  direction="to top"
  disabled={false}
  max={999}
  min={0}
  onChange={[Function]}
  renderThumb={[Function]}
  renderTrack={[Function]}
  rtl={false}
  step={1}
  values={
    Array [
      0,
    ]
  }
/>
`;
